--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mermaid": "^11.2.1",
+    "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
+    "react-google-charts": "^4.0.1",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "react-py": "^1.11.2",
     "react-scripts": "5.0.1",
+    "react-string-replace": "^1.1.1",
     "react-tweet": "^3.2.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
