--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-py": "^1.11.2",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-string-replace": "^1.1.1",
     "react-tweet": "^3.2.1",
